fix: modals visible on all screens

--- a/client/src/stylesheets/game/modals/PlayerModal.scss
+++ b/client/src/stylesheets/game/modals/PlayerModal.scss
@@ -2,6 +2,7 @@
   width: 65rem;
   height: 45rem;
   max-width: none;
+  max-height: 75vh;
   padding: 0.5rem;
   border: 0.125rem solid $space-lightgreen;
   margin: 0;
